Criação do layout

--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
     <link rel="stylesheet" href="style.css" />
     <script src="./app.js" async></script>
   </head>
-<body>
-    
-</body>
+  <body>
+    <header class="header">
+      <img src="./assets/banco.png" alt="Logo Bank" height="50px" />
+      <h1>DEVinBank</h1>
+    </header>
+    <footer class="footer">
+      <p>DEVinBank | Itajaí (SC)</p>
+    </footer>
+  </body>
 </html>
