--- a/index.html
+++ b/index.html
@@ -9,11 +9,50 @@
     <link rel="stylesheet" href="style.css" />
     <script src="./app.js" async></script>
   </head>
+
   <body>
     <header class="header">
       <img src="./assets/banco.png" alt="Logo Bank" height="50px" />
       <h1>DEVinBank</h1>
     </header>
+
+    <main class="main">
+      <section class="section">
+        <h2>Formulário de Cadastro</h2>
+
+        <form id="form" class="form">
+          <div>
+            <label for="nome">Nome:</label>
+            <input required type="text" id="nome" />
+          </div>
+
+          <div>
+            <label for="cpf">CPF:</label>
+            <input required type="text" id="cpf" />
+          </div>
+
+          <div>
+            <label for="celular">Celular:</label>
+            <input required type="tel" id="celular" />
+          </div>
+
+          <div>
+            <label for="senha">Senha:</label>
+            <input required type="password" id="senha" />
+          </div>
+
+          <div>
+            <label for="confirmacao">Confirmar senha:</label>
+            <input required type="password" id="confirmacao" />
+          </div>
+
+          <div>
+            <button type="reset" class="button">Limpar</button>
+            <button type="submit" class="button">Cadastrar</button>
+          </div>
+        </form>
+      </section>
+    </main>
     <footer class="footer">
       <p>DEVinBank | Itajaí (SC)</p>
     </footer>
